added factoriopedia entries fixed mising properties

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -103,5 +103,16 @@ pelagos-maraxsis-super-sealant-substance=Sealant Calcination
 
 [mod-setting-name]
 pelagos-allow-fishing=Allow Inserters to catch fish (overrides cargo-ships setting)
+
 [mod-setting-description]
 pelagos-allow-fishing=Cargo ships mod disables catching fishes by inserters but this is handy mechanic on planet Pelagos. You can still disable it here if you want.
+
+[tips-and-tricks-item-name] 
+pelagos-briefing-main=Pelagos briefing 
+pelagos-coconuts-and-oil=Coconut processing
+pelagos-calciners=Calciner
+
+[tips-and-tricks-item-description]
+pelagos-briefing-main=[planet=pelagos] is an insular world rich in tropical [entity=coconut-palm], [entity=methane], [entity=iron-ore], [entity=copper-ore], and minor lifeforms, including [entity=fish]. Harvest coconuts and process them into oil, sealant, and biofuels, experiment with fermentation, and use high-temperature [entity=calciner] to refine raw materials.
+pelagos-coconuts-and-oil=Harvest coconuts from [entity=coconut-palm]. Coconut meat can be processed into [fluid=coconut-oil] or turned into [item=coconut-sealant], which can be used for shipbuilding or as fuel. 
+pelagos-calciners=[entity=calciner] allows high-temperature purification and transformation of raw materials into refined minerals. \nThe Calciner consumes any fluid with a "Fuel Value", such as [fluid=crude-oil], [fluid=methane], [fluid=coconut-oil], or [fluid=ethanol] (and more). \nThe higher the fuel value of the fluid, the less is needed to burn and process materials. Use it for coconut husks, wood, fish, or other resources that require intensive processing.
