--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -61,6 +61,7 @@ Pirate_Ship=Galleon weaponary
 casting-engine-unit=Engine unit casting
 titanium-barrels=Titanium barrels
 copper-biter-captivity=Copper biter captivity
+cultivation-productivity=Cultivation productivity
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
