--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -215,7 +215,7 @@ wooden-platform=Wooden platform
 pelagos-deepsea=Pelagos deep sea
 
 [string-mod-setting]
-aps-planet-aquilo=[planet=pelagos] Pelagos
+aps-planet-pelagos=[planet=pelagos] Pelagos
 
 [airborne-pollutant-name]
 electromagnetic_waves=Electromagnetic waves
