poisonus-firearm-magazine

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -13,11 +13,11 @@ barreling-machine=Barreling machine
 titanium-sludge=Titanium sludge
 captive-copper-biter-spawner=Captive copper spitter spawner
 copper-biter-spawner=Copper biter spawner
-small-copper-biter=Small copper spitter
-medium-copper-biter=Medium copper spitter
-big-copper-biter=Big copper spitter
-behemoth-copper-biter=Behemoth copper spitter
-leviathan-copper-biter=Leviathan copper spitter
+small-copper-biter=Small copper biter
+medium-copper-biter=Medium copper biter
+big-copper-biter=Big copper biter
+behemoth-copper-biter=Behemoth copper biter
+leviathan-copper-biter=Leviathan copper biter 
 pelagos-copper-stromatolite=Pelagos copper stromatolite
 
 
@@ -109,6 +109,7 @@ titanium-barrel=Titanium barrel
 filled-titanium-barrel=__1__ titanium barrel
 copper-biter-egg=Copper biter egg
 fermented-fish=Fermented fish
+poisonus-firearm-magazine=Poisonus firearm magazine
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
