working on lighthouse

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -62,6 +62,7 @@ casting-engine-unit=Engine unit casting
 titanium-barrels=Titanium barrels
 copper-biter-captivity=Copper biter captivity
 cultivation-productivity=Cultivation productivity
+deep_sea_oil_extraction=Deep sea extraction
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -81,6 +82,7 @@ canex-excavator=Excavate water channels using power of liquid fuels
 Pirate_Ship=Allows galleon to be armed with deadly cannonballs.
 casting-engine-unit=Cast engine units directly from molten iron and activated carbon, bypassing traditional machining. Provides a more efficient metallurgical route to produce engines.
 titanium-barrels=Enables lightweight titanium barrels that stack twice as well as steel barrels, can be loaded in greater numbers onto rockets, and allow safe transport of even the most hard-to-store fluids.
+deep_sea_oil_extraction=Allows for using oil rigs to mine resources from the depths
 
 [item-name]
 coconut=Coconut
