--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -63,6 +63,8 @@ titanium-barrels=Titanium barrels
 copper-biter-captivity=Copper biter captivity
 cultivation-productivity=Cultivation productivity
 deep_sea_oil_extraction=Deep sea extraction
+titanium=Titanium
+ethanol=Ethanol
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -83,6 +85,7 @@ Pirate_Ship=Allows galleon to be armed with deadly cannonballs.
 casting-engine-unit=Cast engine units directly from molten iron and activated carbon, bypassing traditional machining. Provides a more efficient metallurgical route to produce engines.
 titanium-barrels=Enables lightweight titanium barrels that stack twice as well as steel barrels, can be loaded in greater numbers onto rockets, and allow safe transport of even the most hard-to-store fluids.
 deep_sea_oil_extraction=Allows for using oil rigs to mine resources from the depths
+titanium-technology=Enables titanium processing
 
 [item-name]
 coconut=Coconut
@@ -112,6 +115,7 @@ filled-titanium-barrel=__1__ titanium barrel
 copper-biter-egg=Copper biter egg
 fermented-fish=Fermented fish
 poisonus-firearm-magazine=Poisonus firearm magazine
+pelagos-capture-robot-rocket=Pelagos capture robot rocket
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
@@ -175,6 +179,7 @@ aps-pelagos-chemical-science-pack=Pelagos chemical science pack
 pelagos-explosives=Methane explosives
 copper-biter-egg=Copper biter egg
 copper-plate-from-spitter-egg=Copper plate from copper biter egg
+copper-ore-bitter-egg=Copper ore from copper biter egg
 pelagos-capture-robot-rocket=Pelagos capture robot rocket
 
 [mod-setting-name]
@@ -205,7 +210,7 @@ pelagos-briefing-main=[planet=pelagos] is an insular world rich in tropical [ent
 pelagos-coconuts-and-oil=Harvest coconuts from [entity=coconut-palm]. Coconut meat can be processed into [fluid=coconut-oil] or turned into [item=coconut-sealant], which can be used for shipbuilding or as fuel. 
 pelagos-calciners=[entity=calciner] allows high-temperature purification and transformation of raw materials into refined minerals. \nThe Calciner consumes any fluid with a "Fuel Value", such as [fluid=crude-oil], [fluid=methane], [fluid=coconut-oil], or [fluid=ethanol] (and more). \nThe higher the fuel value of the fluid, the less is needed to burn and process materials. Use it for coconut husks, wood, fish, or other resources that require intensive processing.
 canex-excavator=[entity=canex-excavator] is a specialized machine used for controlled land excavation. \nTo operate it, first craft [item=canex-digable] and place it as ground next to a shoreline. Then place the [entity=canex-excavator] on top of it. The machine digs through the placed surface, leaving behind water. \nIts hull is sealed against leaks, so the excavator itself can safely stand on water tiles before and after completing excavation. \nYou can use modules on excavator. [item=speed-module] allows for faster excavation, and [item=productivity-module] will get you more resources.
-wooden-platform=[item=wooden-platform] is a modular surface that allows you to place selected machines and infrastructure on water. Use platforms to expand your factory into lakes, rivers, or oceans, while keeping placement restricted to lightweight, stable structures.\nSupported objects include: \n- [entity=pipe]\n- [entity=barreling-machine]\n- [entity=radar]\n- inserters\n- transport belts\n- logistic/storage chests\n- circuit network machines like combinator,lamp,etc.\n- [entity=gun-turret]\n- [entity=flamethrower-turret]\n- [entity=rocket-turret]
+wooden-platform=[item=wooden-platform] is a modular surface that allows you to place selected machines and infrastructure on water. Use platforms to expand your factory into lakes, rivers, or oceans, while keeping placement restricted to lightweight, stable structures.\nSupported objects include: \n- [entity=pipe]\n- [entity=barreling-machine]\n- [entity=radar]\n- inserters\n- transport belts\n- logistic/storage chests\n- circuit network machines like combinator,lamp,etc.\n- [entity=gun-turret]\n- [entity=flamethrower-turret]\n- [entity=rocket-turret]\n- [entity=pump] (not diesel one)
 
 [fuel-category-name]
 diesel-fuel=Diesel fuel
