new inserter and captive-biter-spawner recipe

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -3,7 +3,7 @@ coconut-palm=Coconut palm
 methane=Methane deposit
 pelagos-big-rock=Pelagos big rock
 calciner=Calciner
-diesel-inserter=Diesel inserter
+diesel-inserter=Extra long handed diesel inserter
 diesel-mining-drill=Diesel mining drill
 diesel-assembling-machine=Diesel assembling machine
 diesel-pump=Diesel pump
@@ -12,13 +12,14 @@ canex-excavator=Diesel excavator
 barreling-machine=Barreling machine
 titanium-sludge=Titanium sludge
 captive-copper-biter-spawner=Captive copper spitter spawner
-copper-biter-spawner=Copper biter spawner
-small-copper-biter=Small copper biter
-medium-copper-biter=Medium copper biter
-big-copper-biter=Big copper biter
-behemoth-copper-biter=Behemoth copper biter
-leviathan-copper-biter=Leviathan copper biter 
+copper-biter-spawner=Copper spitter spawner
+small-copper-biter=Small copper spitter
+medium-copper-biter=Medium copper spitter
+big-copper-biter=Big copper spitter
+behemoth-copper-biter=Behemoth copper spitter
+leviathan-copper-biter=Leviathan copper spitter
 pelagos-copper-stromatolite=Pelagos copper stromatolite
+fast-diesel-inserter=Fast diesel inserter
 
 
 [entity-description]
@@ -60,11 +61,12 @@ canex-excavator=Diesel excavator
 Pirate_Ship=Galleon weaponary
 casting-engine-unit=Engine unit casting
 titanium-barrels=Titanium barrels
-copper-biter-captivity=Copper biter captivity
+copper-biter-captivity=Copper spitter captivity
 cultivation-productivity=Cultivation productivity
 deep_sea_oil_extraction=Deep sea extraction
 titanium=Titanium
 ethanol=Ethanol
+captive-copper-biter-spawner=Captive copper spitter spawner
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -101,7 +103,7 @@ degradation-module-3=Degradation module 3
 poison-rocket=Poison capsule rocket
 slowdown-rocket=Slowdown capsule rocket
 activated-carbon=Activated Carbon
-diesel-inserter=Diesel inserter
+diesel-inserter=Extra long handed diesel inserter
 diesel-mining-drill=Diesel mining drill
 diesel-assembling-machine=Diesel assembling machine
 diesel-pump=Diesel pump
@@ -112,7 +114,7 @@ titanium-plate=Titanium plate
 titanium-dust=Titanium dust
 titanium-barrel=Titanium barrel
 filled-titanium-barrel=__1__ titanium barrel
-copper-biter-egg=Copper biter egg
+copper-biter-egg=Copper spitter egg
 fermented-fish=Fermented fish
 poisonus-firearm-magazine=Poisonus firearm magazine
 pelagos-capture-robot-rocket=Pelagos capture robot rocket
@@ -130,6 +132,7 @@ diesel-mining-drill=Extracts resources using mighty diesel power, independent of
 diesel-inserter=Fuel-powered inserter with extended reach thanks to its diesel engine. Works off-grid, but consumes fuel.
 diesel-assembling-machine=A versatile assembling machine powered by diesel engine. Works independently of the electric grid, but consumes a constant stream of fuel.
 diesel-pump=A robust pump powered by liquid fuel. Transfers fluids without relying on electricity, ideal for off-grid fluid handling.
+fast-diesel-inserter=Fast diesel inserter
 
 [autoplace-control-names]
 methane=Methane
@@ -177,10 +180,11 @@ aps-pelagos-automation-science-pack=Pelagos automaition science pack
 aps-pelagos-logistic-science-pack=Pelagos logistic science pack
 aps-pelagos-chemical-science-pack=Pelagos chemical science pack
 pelagos-explosives=Methane explosives
-copper-biter-egg=Copper biter egg
-copper-plate-from-spitter-egg=Copper plate from copper biter egg
-copper-ore-bitter-egg=Copper ore from copper biter egg
+copper-biter-egg=Copper spitter egg
+copper-plate-from-copper-biter-egg=Copper plate from copper spitter egg
+copper-ore-bitter-egg=Copper ore from copper spitter egg
 pelagos-capture-robot-rocket=Pelagos capture robot rocket
+fast-diesel-inserter=Fast diesel inserter
 
 [mod-setting-name]
 pelagos-allow-fishing=Allow Inserters to catch fish (overrides cargo-ships settings)
