accumulator generate em + generation improvements

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -116,7 +116,7 @@ titanium-barrel=Titanium barrel
 filled-titanium-barrel=__1__ titanium barrel
 copper-biter-egg=Copper spitter egg
 fermented-fish=Fermented fish
-poisonus-firearm-magazine=Poisonus firearm magazine
+poisonus-firearm-magazine=Poisonous firearm magazine
 pelagos-capture-robot-rocket=Pelagos capture robot rocket
 
 [item-description]
@@ -179,6 +179,7 @@ fill-titanium-barrel=Fill __1__ titanium barrel
 aps-pelagos-automation-science-pack=Pelagos automaition science pack
 aps-pelagos-logistic-science-pack=Pelagos logistic science pack
 aps-pelagos-chemical-science-pack=Pelagos chemical science pack
+aps-pelagos-military-science-pack=Pelagos military science pack
 pelagos-explosives=Methane explosives
 copper-biter-egg=Copper spitter egg
 copper-plate-from-copper-biter-egg=Copper plate from copper spitter egg
