collision fix + capture bot bullet

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -117,7 +117,7 @@ filled-titanium-barrel=__1__ titanium barrel
 copper-biter-egg=Copper spitter egg
 fermented-fish=Fermented fish
 poisonus-firearm-magazine=Poisonous firearm magazine
-pelagos-capture-robot-rocket=Pelagos capture robot rocket
+pelagos-capture-robot-rocket=Pelagos capture robot bullet
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
@@ -184,7 +184,7 @@ pelagos-explosives=Methane explosives
 copper-biter-egg=Copper spitter egg
 copper-plate-from-copper-biter-egg=Copper plate from copper spitter egg
 copper-ore-bitter-egg=Copper ore from copper spitter egg
-pelagos-capture-robot-rocket=Pelagos capture robot rocket
+pelagos-capture-robot-rocket=Pelagos capture robot bullet
 fast-diesel-inserter=Fast diesel inserter
 
 [mod-setting-name]
