corrosive + heavy-gun-turret

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -20,6 +20,7 @@ behemoth-copper-biter=Behemoth copper spitter
 leviathan-copper-biter=Leviathan copper spitter
 pelagos-copper-stromatolite=Pelagos copper stromatolite
 fast-diesel-inserter=Fast diesel inserter
+heavy-gun-turret=Heavy gun turret
 
 
 [entity-description]
@@ -30,6 +31,7 @@ diesel-inserter=Fuel-powered inserter with extended reach thanks to its diesel e
 diesel-assembling-machine=A versatile assembling machine powered by diesel engine. Works independently of the electric grid, but consumes a constant stream of fuel.
 diesel-pump=A robust pump powered by liquid fuel. Transfers fluids without relying on electricity, ideal for off-grid fluid handling.
 canex-excavator=Excavate water channels using power of liquid fuels
+heavy-gun-turret=Reinforced titanium gun turret.\nFires three times faster than the standard model, with equal range and far greater resilience.Perfect for high-intensity defenses.
 
 [fluid-name]
 methane=Methane
@@ -116,8 +118,9 @@ titanium-barrel=Titanium barrel
 filled-titanium-barrel=__1__ titanium barrel
 copper-biter-egg=Copper spitter egg
 fermented-fish=Fermented fish
-poisonus-firearm-magazine=Poisonous firearm magazine
+corrosive-firearm-magazine=Corrosive firearm magazine
 pelagos-capture-robot-rocket=Pelagos capture robot bullet
+heavy-gun-turret=Heavy gun turret
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
@@ -133,6 +136,7 @@ diesel-inserter=Fuel-powered inserter with extended reach thanks to its diesel e
 diesel-assembling-machine=A versatile assembling machine powered by diesel engine. Works independently of the electric grid, but consumes a constant stream of fuel.
 diesel-pump=A robust pump powered by liquid fuel. Transfers fluids without relying on electricity, ideal for off-grid fluid handling.
 fast-diesel-inserter=Fast diesel inserter
+corrosive-firearm-magazine=Projectile coated with a corrosive compound.\nCapable of breaking down asteroid stone as easily as it dissolves living tissue.
 
 [autoplace-control-names]
 methane=Methane
@@ -237,3 +241,6 @@ electromagnetic_waves=Electromagnetic waves
 
 [airborne-pollutant-name-with-amount]
 electromagnetic_waves=__1__ electromagnetic waves
+
+[damage-type-name]
+corrosive=Corrosive
