heavy-gun-turret-technology

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -69,6 +69,7 @@ deep_sea_oil_extraction=Deep sea extraction
 titanium=Titanium
 ethanol=Ethanol
 captive-copper-biter-spawner=Captive copper spitter spawner
+heavy-gun-turret=Heavy gun turret
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -90,6 +91,7 @@ casting-engine-unit=Cast engine units directly from molten iron and activated ca
 titanium-barrels=Enables lightweight titanium barrels that stack twice as well as steel barrels, can be loaded in greater numbers onto rockets, and allow safe transport of even the most hard-to-store fluids.
 deep_sea_oil_extraction=Allows for using oil rigs to mine resources from the depths
 titanium-technology=Enables titanium processing
+heavy-gun-turret=Reinforced titanium gun turret.\nFires three times faster than the standard model, with equal range and far greater resilience.Perfect for high-intensity defenses.
 
 [item-name]
 coconut=Coconut
