diesel-agricultural-tower

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -21,6 +21,7 @@ leviathan-copper-biter=Leviathan copper spitter
 pelagos-copper-stromatolite=Pelagos copper stromatolite
 fast-diesel-inserter=Fast diesel inserter
 heavy-gun-turret=Heavy gun turret
+diesel-agricultural-tower=Diesel agricultural tower
 
 
 [entity-description]
@@ -70,6 +71,7 @@ titanium=Titanium
 ethanol=Ethanol
 captive-copper-biter-spawner=Captive copper spitter spawner
 heavy-gun-turret=Heavy gun turret
+diesel-agriculture=Diesel agriculture
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -92,6 +94,7 @@ titanium-barrels=Enables lightweight titanium barrels that stack twice as well a
 deep_sea_oil_extraction=Allows for using oil rigs to mine resources from the depths
 titanium-technology=Enables titanium processing
 heavy-gun-turret=Reinforced titanium gun turret.\nFires three times faster than the standard model, with equal range and far greater resilience.Perfect for high-intensity defenses.
+diesel-agriculture=Farming powered by liquid fuel engines
 
 [item-name]
 coconut=Coconut
@@ -123,6 +126,7 @@ fermented-fish=Fermented fish
 corrosive-firearm-magazine=Corrosive firearm magazine
 pelagos-capture-robot-rocket=Pelagos capture robot bullet
 heavy-gun-turret=Heavy gun turret
+diesel-agricultural-tower=Diesel agricultural tower
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
@@ -139,6 +143,7 @@ diesel-assembling-machine=A versatile assembling machine powered by diesel engin
 diesel-pump=A robust pump powered by liquid fuel. Transfers fluids without relying on electricity, ideal for off-grid fluid handling.
 fast-diesel-inserter=Fast diesel inserter
 corrosive-firearm-magazine=Projectile coated with a corrosive compound.\nCapable of breaking down asteroid stone as easily as it dissolves living tissue.
+diesel-agricultural-tower=Agricultural tower powered by liquid fuel engine.
 
 [autoplace-control-names]
 methane=Methane
