copper chain balancing

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -109,7 +109,7 @@ degradation-module-2=Degradation module 2
 degradation-module-3=Degradation module 3
 poison-rocket=Poison capsule rocket
 slowdown-rocket=Slowdown capsule rocket
-activated-carbon=Activated Carbon
+activated-carbon=Activated carbon
 diesel-inserter=Extra long handed diesel inserter
 diesel-mining-drill=Diesel mining drill
 diesel-assembling-machine=Diesel assembling machine
