--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -22,6 +22,8 @@ pelagos-copper-stromatolite=Pelagos copper stromatolite
 fast-diesel-inserter=Fast diesel inserter
 heavy-gun-turret=Heavy gun turret
 diesel-agricultural-tower=Diesel agricultural tower
+pelagos-titanium-coral=Titanium coral
+crane-bulk-diesel-inserter=Crane bulk diesel inserter
 
 
 [entity-description]
@@ -33,6 +35,7 @@ diesel-assembling-machine=A versatile assembling machine powered by diesel engin
 diesel-pump=A robust pump powered by liquid fuel. Transfers fluids without relying on electricity, ideal for off-grid fluid handling.
 canex-excavator=Excavate water channels using power of liquid fuels
 heavy-gun-turret=Reinforced titanium gun turret.\nFires three times faster than the standard model, with equal range and far greater resilience.Perfect for high-intensity defenses.
+crane-bulk-diesel-inserter=A heavy-duty, fuel-powered crane designed for bulk cargo handling. It easily moves entire stacks in a single grab.\nPerfect for unloading ships or transferring items between large storage containers.
 
 [fluid-name]
 methane=Methane
@@ -127,6 +130,7 @@ corrosive-firearm-magazine=Corrosive firearm magazine
 pelagos-capture-robot-rocket=Pelagos capture robot bullet
 heavy-gun-turret=Heavy gun turret
 diesel-agricultural-tower=Diesel agricultural tower
+crane-bulk-diesel-inserter=Crane bulk diesel inserter
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
@@ -144,6 +148,7 @@ diesel-pump=A robust pump powered by liquid fuel. Transfers fluids without relyi
 fast-diesel-inserter=Fast diesel inserter
 corrosive-firearm-magazine=Projectile coated with a corrosive compound.\nCapable of breaking down asteroid stone as easily as it dissolves living tissue.
 diesel-agricultural-tower=Agricultural tower powered by liquid fuel engine.
+crane-bulk-diesel-inserter=A heavy-duty, fuel-powered crane designed for bulk cargo handling. It easily moves entire stacks in a single grab.\nPerfect for unloading ships or transferring items between large storage containers.
 
 [autoplace-control-names]
 methane=Methane
@@ -229,6 +234,7 @@ pelagos-calciners=[entity=calciner] allows high-temperature purification and tra
 canex-excavator=[entity=canex-excavator] is a specialized machine used for controlled land excavation. \nTo operate it, first craft [item=canex-digable] and place it as ground next to a shoreline. Then place the [entity=canex-excavator] on top of it. The machine digs through the placed surface, leaving behind water. \nIts hull is sealed against leaks, so the excavator itself can safely stand on water tiles before and after completing excavation. \nYou can use modules on excavator. [item=speed-module] allows for faster excavation, and [item=productivity-module] will get you more resources.
 wooden-platform=[item=wooden-platform] is a modular surface that allows you to place selected machines and infrastructure on water. Use platforms to expand your factory into lakes, rivers, or oceans, while keeping placement restricted to lightweight, stable structures.\nSupported objects include: \n- [entity=pipe]\n- [entity=barreling-machine]\n- [entity=radar]\n- inserters\n- transport belts\n- logistic/storage chests\n- circuit network machines like combinator,lamp,etc.\n- [entity=gun-turret]\n- [entity=flamethrower-turret]\n- [entity=rocket-turret]\n- [entity=pump] (not diesel one)
 electromagnetic_waves=Every electric machine and generator emits invisible electromagnetic waves.\nThese emissions represent radiation and interference produced by electricity usage.\nDifferent surfaces absorb them at different rates – water absorbs almost nothing, while sand slowly neutralizes them.\nSpawners and creatures on Pelagos can detect and react to these emissions: the more powerful your electric network, the more likely they are to be disturbed.\nKeep this in mind when building large power-hungry factories, or consider alternatives like diesel-powered machines if you want to stay safe.
+
 
 [fuel-category-name]
 diesel-fuel=Diesel fuel
