--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -210,6 +210,8 @@ pelagos-boat-inventory=Boat inventory size (overrides cargo-ships settings)
 pelagos-cargoship-inventory=Cargo ship inventory size(overrides cargo-ships settings)
 pelagos-tanker-capacity=Tanker Capacity (overrides cargo-ships settings)
 pelagos-fluid-value-based-flamethrower=Fluid value based flamethrower-turret dmg
+allow-galleon-before-pelagos=Allow galleon before pelagos
+
 
 [mod-setting-description]
 pelagos-allow-fishing=Cargo ships mod disables catching fishes by inserters but this is handy mechanic on planet Pelagos. You can still disable it here if you want.
@@ -218,6 +220,7 @@ pelagos-boat-inventory=The default value for boat inventory was too high, so it 
 pelagos-cargoship-inventory=The default value for cargo ship inventory was too high, so it has been reduced to a smaller value. (default in cargo ships 1000)
 pelagos-tanker-capacity=The default value for tanker capacity was too high, so it has been reduced to a smaller value. (default in cargo ships 250000)
 pelagos-fluid-value-based-flamethrower=Add every fluid with fuel value to flamethrower turret ammo list and balance flamethrower turret damage based on fuel value
+allow-galleon-before-pelagos=Unlocks galleon with steel axe research.
 
 [tips-and-tricks-item-name] 
 pelagos-briefing-main=Pelagos briefing 
