ethanol thruster and asteroids-bioprocessing

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -24,6 +24,7 @@ heavy-gun-turret=Heavy gun turret
 diesel-agricultural-tower=Diesel agricultural tower
 pelagos-titanium-coral=Titanium coral
 crane-bulk-diesel-inserter=Crane bulk diesel inserter
+ethanol-thruster=Ethanol thruster
 
 
 [entity-description]
@@ -36,6 +37,7 @@ diesel-pump=A robust pump powered by liquid fuel. Transfers fluids without relyi
 canex-excavator=Excavate water channels using power of liquid fuels
 heavy-gun-turret=Reinforced titanium gun turret.\nFires three times faster than the standard model, with equal range and far greater resilience.Perfect for high-intensity defenses.
 crane-bulk-diesel-inserter=A heavy-duty, fuel-powered crane designed for bulk cargo handling. It easily moves entire stacks in a single grab.\nPerfect for unloading ships or transferring items between large storage containers.
+ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, this thruster delivers clean, efficient thrust without the need for an oxidizer.
 
 [fluid-name]
 methane=Methane
@@ -75,6 +77,8 @@ ethanol=Ethanol
 captive-copper-biter-spawner=Captive copper spitter spawner
 heavy-gun-turret=Heavy gun turret
 diesel-agriculture=Diesel agriculture
+ethanol-thruster=Ethanol thruster
+pelagos-asteroid-bioprocessing=Asteroid bioprocessing
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -98,6 +102,8 @@ deep_sea_oil_extraction=Allows for using oil rigs to mine resources from the dep
 titanium-technology=Enables titanium processing
 heavy-gun-turret=Reinforced titanium gun turret.\nFires three times faster than the standard model, with equal range and far greater resilience.Perfect for high-intensity defenses.
 diesel-agriculture=Farming powered by liquid fuel engines
+pelagos-asteroid-bioprocessing=Allows biochamber to process asteroids
+ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, this thruster delivers clean, efficient thrust without the need for an oxidizer.
 
 [item-name]
 coconut=Coconut
@@ -131,6 +137,7 @@ pelagos-capture-robot-rocket=Pelagos capture robot bullet
 heavy-gun-turret=Heavy gun turret
 diesel-agricultural-tower=Diesel agricultural tower
 crane-bulk-diesel-inserter=Crane bulk diesel inserter
+ethanol-thruster=Ethanol thruster
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
@@ -149,6 +156,7 @@ fast-diesel-inserter=Fast diesel inserter
 corrosive-firearm-magazine=Projectile coated with a corrosive compound.\nCapable of breaking down asteroid stone as easily as it dissolves living tissue.
 diesel-agricultural-tower=Agricultural tower powered by liquid fuel engine.
 crane-bulk-diesel-inserter=A heavy-duty, fuel-powered crane designed for bulk cargo handling. It easily moves entire stacks in a single grab.\nPerfect for unloading ships or transferring items between large storage containers.
+ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, this thruster delivers clean, efficient thrust without the need for an oxidizer.
 
 [autoplace-control-names]
 methane=Methane
@@ -196,12 +204,17 @@ aps-pelagos-automation-science-pack=Pelagos automaition science pack
 aps-pelagos-logistic-science-pack=Pelagos logistic science pack
 aps-pelagos-chemical-science-pack=Pelagos chemical science pack
 aps-pelagos-military-science-pack=Pelagos military science pack
+aps-pelagos-space-science-pack=Pelagos space science pack
 pelagos-explosives=Methane explosives
 copper-biter-egg=Copper spitter egg
 copper-plate-from-copper-biter-egg=Copper plate from copper spitter egg
 copper-ore-bitter-egg=Copper ore from copper spitter egg
 pelagos-capture-robot-rocket=Pelagos capture robot bullet
 fast-diesel-inserter=Fast diesel inserter
+metallic-asteroid-methane-crushing=Metallic asteroid methane crushing
+carbonic-asteroid-gasification=Carbonic asteroid gasification
+oxide-asteroid-melting=Oxide asteroid melting
+
 
 [mod-setting-name]
 pelagos-allow-fishing=Allow Inserters to catch fish (overrides cargo-ships settings)
