--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -224,6 +224,7 @@ pelagos-cargoship-inventory=Cargo ship inventory size(overrides cargo-ships sett
 pelagos-tanker-capacity=Tanker Capacity (overrides cargo-ships settings)
 pelagos-fluid-value-based-flamethrower=Fluid value based flamethrower-turret dmg
 allow-galleon-before-pelagos=Allow galleon before pelagos
+pelagos-boat-friction=Boat friction
 
 
 [mod-setting-description]
@@ -234,6 +235,7 @@ pelagos-cargoship-inventory=The default value for cargo ship inventory was too h
 pelagos-tanker-capacity=The default value for tanker capacity was too high, so it has been reduced to a smaller value. (default in cargo ships 250000)
 pelagos-fluid-value-based-flamethrower=Add every fluid with fuel value to flamethrower turret ammo list and balance flamethrower turret damage based on fuel value
 allow-galleon-before-pelagos=Unlocks galleon with steel axe research.
+pelagos-boat-friction=Small Boat friction. Less means boat is faster. This overrides cargo ships boat speed setting
 
 [tips-and-tricks-item-name] 
 pelagos-briefing-main=Pelagos briefing 
