--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -25,6 +25,7 @@ diesel-agricultural-tower=Diesel agricultural tower
 pelagos-titanium-coral=Titanium coral
 crane-bulk-diesel-inserter=Crane bulk diesel inserter
 ethanol-thruster=Ethanol thruster
+lighthouse=Lighthouse
 
 
 [entity-description]
@@ -38,6 +39,7 @@ canex-excavator=Excavate water channels using power of liquid fuels
 heavy-gun-turret=Reinforced titanium gun turret.\nFires three times faster than the standard model, with equal range and far greater resilience.Perfect for high-intensity defenses.
 crane-bulk-diesel-inserter=A heavy-duty, fuel-powered crane designed for bulk cargo handling. It easily moves entire stacks in a single grab.\nPerfect for unloading ships or transferring items between large storage containers.
 ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, this thruster delivers clean, efficient thrust without the need for an oxidizer.
+lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and reveal distant islands, helping locate new resources and suitable building sites.
 
 [fluid-name]
 methane=Methane
@@ -79,6 +81,7 @@ heavy-gun-turret=Heavy gun turret
 diesel-agriculture=Diesel agriculture
 ethanol-thruster=Ethanol thruster
 pelagos-asteroid-bioprocessing=Asteroid bioprocessing
+lighthouse=Lighthouse
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -104,6 +107,7 @@ heavy-gun-turret=Reinforced titanium gun turret.\nFires three times faster than 
 diesel-agriculture=Farming powered by liquid fuel engines
 pelagos-asteroid-bioprocessing=Allows biochamber to process asteroids
 ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, this thruster delivers clean, efficient thrust without the need for an oxidizer.
+lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and reveal distant islands, helping locate new resources and suitable building sites.
 
 [item-name]
 coconut=Coconut
@@ -157,6 +161,7 @@ corrosive-firearm-magazine=Projectile coated with a corrosive compound.\nCapable
 diesel-agricultural-tower=Agricultural tower powered by liquid fuel engine.
 crane-bulk-diesel-inserter=A heavy-duty, fuel-powered crane designed for bulk cargo handling. It easily moves entire stacks in a single grab.\nPerfect for unloading ships or transferring items between large storage containers.
 ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, this thruster delivers clean, efficient thrust without the need for an oxidizer.
+lighthouse=Lighthouse
 
 [autoplace-control-names]
 methane=Methane
