--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -219,6 +219,7 @@ fast-diesel-inserter=Fast diesel inserter
 metallic-asteroid-methane-crushing=Metallic asteroid methane crushing
 carbonic-asteroid-gasification=Carbonic asteroid gasification
 oxide-asteroid-melting=Oxide asteroid melting
+titanium-plate-from-dust=Titanium plate from dust
 
 
 [mod-setting-name]
