diesel-asteroid-collector

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -26,6 +26,7 @@ pelagos-titanium-coral=Titanium coral
 crane-bulk-diesel-inserter=Crane bulk diesel inserter
 ethanol-thruster=Ethanol thruster
 lighthouse=Lighthouse
+diesel-asteroid-collector=Diesel asteroid collector
 
 
 [entity-description]
@@ -40,6 +41,7 @@ heavy-gun-turret=Reinforced titanium gun turret.\nFires three times faster than 
 crane-bulk-diesel-inserter=A heavy-duty, fuel-powered crane designed for bulk cargo handling. It easily moves entire stacks in a single grab.\nPerfect for unloading ships or transferring items between large storage containers.
 ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, this thruster delivers clean, efficient thrust without the need for an oxidizer.
 lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and reveal distant islands, helping locate new resources and suitable building sites.
+diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel engine. It operates independently of the electric grid. While slower than its electric counterpart, it features twice the collection range.
 
 [fluid-name]
 methane=Methane
@@ -82,6 +84,7 @@ diesel-agriculture=Diesel agriculture
 ethanol-thruster=Ethanol thruster
 pelagos-asteroid-bioprocessing=Asteroid bioprocessing
 lighthouse=Lighthouse
+diesel-asteroid-collector=Diesel asteroid collector
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -108,6 +111,7 @@ diesel-agriculture=Farming powered by liquid fuel engines
 pelagos-asteroid-bioprocessing=Allows biochamber to process asteroids
 ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, this thruster delivers clean, efficient thrust without the need for an oxidizer.
 lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and reveal distant islands, helping locate new resources and suitable building sites.
+diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel engine. It operates independently of the electric grid. While slower than its electric counterpart, it features twice the collection range.
 
 [item-name]
 coconut=Coconut
@@ -142,6 +146,8 @@ heavy-gun-turret=Heavy gun turret
 diesel-agricultural-tower=Diesel agricultural tower
 crane-bulk-diesel-inserter=Crane bulk diesel inserter
 ethanol-thruster=Ethanol thruster
+lighthouse=Lighthouse
+diesel-asteroid-collector=Diesel asteroid collector
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
@@ -161,7 +167,8 @@ corrosive-firearm-magazine=Projectile coated with a corrosive compound.\nCapable
 diesel-agricultural-tower=Agricultural tower powered by liquid fuel engine.
 crane-bulk-diesel-inserter=A heavy-duty, fuel-powered crane designed for bulk cargo handling. It easily moves entire stacks in a single grab.\nPerfect for unloading ships or transferring items between large storage containers.
 ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, this thruster delivers clean, efficient thrust without the need for an oxidizer.
-lighthouse=Lighthouse
+lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and reveal distant islands, helping locate new resources and suitable building sites.
+diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel engine. It operates independently of the electric grid. While slower than its electric counterpart, it features twice the collection range.
 
 [autoplace-control-names]
 methane=Methane
