heavy gun turret fix

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -288,3 +288,6 @@ electromagnetic_waves=__1__ electromagnetic waves
 
 [damage-type-name]
 corrosive=Corrosive
+
+[modifier-description]
+heavy-gun-turret-attack-bonus=Heavy gun turret damage: +__1__
