--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -24,6 +24,7 @@ heavy-gun-turret=Heavy gun turret
 diesel-agricultural-tower=Diesel agricultural tower
 pelagos-titanium-coral=Titanium coral
 crane-bulk-diesel-inserter=Crane bulk diesel inserter
+crane-stack-diesel-inserter=Crane stack diesel inserter
 ethanol-thruster=Ethanol thruster
 lighthouse=Lighthouse
 diesel-asteroid-collector=Diesel asteroid collector
@@ -42,6 +43,7 @@ crane-bulk-diesel-inserter=A heavy-duty, fuel-powered crane designed for bulk ca
 ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, this thruster delivers clean, efficient thrust without the need for an oxidizer.
 lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and reveal distant islands, helping locate new resources and suitable building sites.
 diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel engine. It operates independently of the electric grid. While slower than its electric counterpart, it features twice the collection range.
+crane-stack-diesel-inserter=Fuel-powered belt stacking crane. Collects a full stack before transferring, allowing layered belt loading with crane-level throughput capacity.
 
 [fluid-name]
 methane=Methane
@@ -85,6 +87,7 @@ ethanol-thruster=Ethanol thruster
 pelagos-asteroid-bioprocessing=Asteroid bioprocessing
 lighthouse=Lighthouse
 diesel-asteroid-collector=Diesel asteroid collector
+crane-stack-diesel-inserter=Crane stack diesel inserter
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -112,6 +115,7 @@ pelagos-asteroid-bioprocessing=Allows biochamber to process asteroids
 ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, this thruster delivers clean, efficient thrust without the need for an oxidizer.
 lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and reveal distant islands, helping locate new resources and suitable building sites.
 diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel engine. It operates independently of the electric grid. While slower than its electric counterpart, it features twice the collection range.
+crane-stack-diesel-inserter=A specialized fuel-powered crane engineered for precise bulk transfer. Works like a stack inserter: \nIt gathers a full stack of items before swinging, enabling dense layered placement on belts. Its heavy-duty grab mechanism allows it to hold and move entire stacks at once, merging the lifting capacity of a crane with the accuracy of a stack inserter.
 
 [item-name]
 coconut=Coconut
@@ -145,6 +149,7 @@ pelagos-capture-robot-rocket=Pelagos capture robot bullet
 heavy-gun-turret=Heavy gun turret
 diesel-agricultural-tower=Diesel agricultural tower
 crane-bulk-diesel-inserter=Crane bulk diesel inserter
+crane-stack-diesel-inserter=Crane stack diesel inserter
 ethanol-thruster=Ethanol thruster
 lighthouse=Lighthouse
 diesel-asteroid-collector=Diesel asteroid collector
@@ -169,6 +174,7 @@ crane-bulk-diesel-inserter=A heavy-duty, fuel-powered crane designed for bulk ca
 ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, this thruster delivers clean, efficient thrust without the need for an oxidizer.
 lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and reveal distant islands, helping locate new resources and suitable building sites.
 diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel engine. It operates independently of the electric grid. While slower than its electric counterpart, it features twice the collection range.
+crane-stack-diesel-inserter=Fuel-powered belt stacking crane. Collects a full stack before transferring, allowing layered belt loading with crane-level throughput capacity.
 
 [autoplace-control-names]
 methane=Methane
