--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -28,6 +28,7 @@ crane-stack-diesel-inserter=Crane stack diesel inserter
 ethanol-thruster=Ethanol thruster
 lighthouse=Lighthouse
 diesel-asteroid-collector=Diesel asteroid collector
+steam-inserter=Steam inserter
 
 
 [entity-description]
@@ -153,6 +154,7 @@ crane-stack-diesel-inserter=Crane stack diesel inserter
 ethanol-thruster=Ethanol thruster
 lighthouse=Lighthouse
 diesel-asteroid-collector=Diesel asteroid collector
+steam-inserter=Steam inserter
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
@@ -233,10 +235,12 @@ metallic-asteroid-methane-crushing=Metallic asteroid methane crushing
 carbonic-asteroid-gasification=Carbonic asteroid gasification
 oxide-asteroid-melting=Oxide asteroid melting
 titanium-plate-from-dust=Titanium plate from dust
-
+steam-inserter=Steam inserter
+steam-inserter-iron-pipe=Steam inserter
+steam-assembling-machine-iron-pipe=Steam assembling machine
 
 [mod-setting-name]
-pelagos-allow-fishing=Allow Inserters to catch fish (overrides cargo-ships settings)
+pelagos-allow-fishing=Allow inserters to catch fish (overrides cargo-ships settings)
 pelagos-force-small-electric-generator=Force small electric generator setting on oil rig (overrides cargo-ships settings)
 pelagos-boat-inventory=Boat inventory size (overrides cargo-ships settings)
 pelagos-cargoship-inventory=Cargo ship inventory size(overrides cargo-ships settings)
