--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -248,6 +248,8 @@ pelagos-tanker-capacity=Tanker Capacity (overrides cargo-ships settings)
 pelagos-fluid-value-based-flamethrower=Fluid value based flamethrower-turret dmg
 allow-galleon-before-pelagos=Allow galleon before pelagos
 pelagos-boat-friction=Boat friction
+pelagos-methane-on-vesta=Replace Vesta methane tiles with Pelagos methane stain
+pelagos-override-vesta-methane-fluid-icon=Override Vesta methane icon with Pelagos icon
 
 
 [mod-setting-description]
@@ -259,6 +261,9 @@ pelagos-tanker-capacity=The default value for tanker capacity was too high, so i
 pelagos-fluid-value-based-flamethrower=Add every fluid with fuel value to flamethrower turret ammo list and balance flamethrower turret damage based on fuel value
 allow-galleon-before-pelagos=Unlocks galleon with steel axe research.
 pelagos-boat-friction=Small Boat friction. Less means boat is faster. This overrides cargo ships boat speed setting
+pelagos-methane-on-vesta=Changes vesta planet generation by removing methane tiles and adding methane stain that can be mined with oil rig. To make sure you can mine methane on Vesta, planet is locked behind oil rig
+pelagos-override-vesta-methane-fluid-icon=By default vesta have different methance fluid color icon than pelagos this setting allows you to pick option you like more
+
 
 [tips-and-tricks-item-name] 
 pelagos-briefing-main=Pelagos briefing 
