portable-diesel-generator

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -88,6 +88,7 @@ pelagos-asteroid-bioprocessing=Asteroid bioprocessing
 lighthouse=Lighthouse
 diesel-asteroid-collector=Diesel asteroid collector
 crane-stack-diesel-inserter=Crane stack diesel inserter
+portable-diesel-generator=Portable diesel generator
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -116,6 +117,7 @@ ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, th
 lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and reveal distant islands, helping locate new resources and suitable building sites.
 diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel engine. It operates independently of the electric grid. While slower than its electric counterpart, it features twice the collection range.
 crane-stack-diesel-inserter=A specialized fuel-powered crane engineered for precise bulk transfer. Works like a stack inserter: \nIt gathers a full stack of items before swinging, enabling dense layered placement on belts. Its heavy-duty grab mechanism allows it to hold and move entire stacks at once, merging the lifting capacity of a crane with the accuracy of a stack inserter.
+portable-diesel-generator=A reinforced portable diesel core designed for the harsh, salty winds of Pelagos. When fed barrels of fuel, it overwhelms even the Fission Reactor’s output.
 
 [item-name]
 coconut=Coconut
@@ -154,6 +156,7 @@ ethanol-thruster=Ethanol thruster
 lighthouse=Lighthouse
 diesel-asteroid-collector=Diesel asteroid collector
 steam-inserter=Steam inserter
+portable-diesel-generator=Portable diesel generator
 
 [item-description]
 coconut=Fresh coconut. Versatile fruit that can be eaten, burned, or processed.
@@ -176,6 +179,7 @@ ethanol-thruster=Forged from lightweight titanium and fueled by pure ethanol, th
 lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and reveal distant islands, helping locate new resources and suitable building sites.
 diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel engine. It operates independently of the electric grid. While slower than its electric counterpart, it features twice the collection range.
 crane-stack-diesel-inserter=Fuel-powered belt stacking crane. Collects a full stack before transferring, allowing layered belt loading with crane-level throughput capacity.
+portable-diesel-generator=A reinforced portable diesel core designed for the harsh, salty winds of Pelagos. When fed barrels of fuel, it overwhelms even the Fission Reactor’s output.
 
 [autoplace-control-names]
 methane=Methane
@@ -303,3 +307,6 @@ corrosive=Corrosive
 
 [modifier-description]
 heavy-gun-turret-attack-bonus=Heavy gun turret damage: +__1__
+
+[equipment-name]
+portable-diesel-generator=Portable diesel generator
