--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -89,6 +89,7 @@ lighthouse=Lighthouse
 diesel-asteroid-collector=Diesel asteroid collector
 crane-stack-diesel-inserter=Crane stack diesel inserter
 portable-diesel-generator=Portable diesel generator
+coconut-drop-technology=Coconut drop technology
 
 [technology-description]
 planet-discovery-pelagos=Discover the insular planet Pelagos and unlock its secrets.
@@ -118,6 +119,7 @@ lighthouse=A powerful liquid fueled radar. It can scan vast stretches of sea and
 diesel-asteroid-collector=Asteroid collector powered by a liquid-fueled diesel engine. It operates independently of the electric grid. While slower than its electric counterpart, it features twice the collection range.
 crane-stack-diesel-inserter=A specialized fuel-powered crane engineered for precise bulk transfer. Works like a stack inserter: \nIt gathers a full stack of items before swinging, enabling dense layered placement on belts. Its heavy-duty grab mechanism allows it to hold and move entire stacks at once, merging the lifting capacity of a crane with the accuracy of a stack inserter.
 portable-diesel-generator=A reinforced portable diesel core designed for the harsh, salty winds of Pelagos. When fed barrels of fuel, it overwhelms even the Fission Reactor’s output.
+coconut-drop-technology=You can drop coconuts on Cerys surface even before blasting hole in magnetosphere.
 
 [item-name]
 coconut=Coconut
